# autism-ml-detection

./: LICENSE  README.md  pyproject.toml
notebooks/: 01.preprocessing.ipynb  02.eda.ipynb  03.feature_engineering.ipynb
src/: utils.py
src/data/: DS_Adult_Autism_Data.csv  preprocessed_data.csv
