[project]
name = "autism-ml-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "andres-manzano",email = "afmanzanosolarte@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "stats (>=0.1.2a0,<0.2.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
